# nagyml-2

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
docs/: main.md
game/: nage.yml
game/prompts/: main.yml
game/prompts/combat/: combat.yml
src/: cmd.rs  core.rs  game.rs  input.rs  loading.rs  main.rs  text.rs
src/cmd/: builder.rs  cli.rs  runtime.rs
src/cmd/builder/: core.rs  prompt.rs  text.rs  util.rs
src/core/: audio.rs  choice.rs  config.rs  context.rs  discord.rs  game.rs  manifest.rs  path.rs  player.rs  prompt.rs  resources.rs  scripts.rs  state.rs  text.rs
src/core/state/: info.rs  notes.rs  variables.rs
src/core/text/: display.rs
src/game/: gloop.rs  input.rs  main.rs
src/input/: commands.rs  controller.rs
src/loading/: base.rs  loader.rs  saves.rs
src/template/: main.yml  nage.yml
src/text/: context.rs  display.rs  templating.rs
