[package]
name = "nage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = [ "derive" ] }
serde_yaml = "0.8"
semver = { version = "1.0.16", features = [ "serde" ] }
format_serde_error = "0.3.0"
walkdir = "2"
anyhow = "1.0.69"
snailshell = "0.3.1"
ctrlc = "3.2.5"
rustyline = "10.1.1"
clap = { version = "4.1.6", features = [ "derive" ] }
itertools = "0.10.5"
