[package]
name = "nage"
version = "2.0.0"
edition = "2021"
authors = [ "acikek" ]
homepage = "https://github.com/acikek/nage-2#README"
repository = "https://github.com/acikek/nage-2"
license = "MIT"
keywords = [ "nage", "not", "another", "game", "engine" ]
categories = [ "command-line-utilities", "games", "game-engines", "game-development" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = [ "derive" ] }
serde_yaml = "0.8"
semver = { version = "1.0.16", features = [ "serde" ] }
format_serde_error = "0.3.0"
walkdir = "2"
anyhow = "1.0.69"
snailshell = "0.3.1"
rustyline = "10.1.1"
clap = { version = "4.1.6", features = [ "derive" ] }
itertools = "0.10.5"
rlua = "0.19.4"
result = "1.0.0"
rand = "0.8.5"
termimad = "0.21.1"
requestty = "0.5.0"
